Bug 1278502 - TSan: data races netwerk/cache2/CacheFileIOManager.{h,cpp} on CacheFileHandle::{mSpecialFile, mInvalid}.  r=michal.novotny.

--HG--
extra : rebase_source : 0e81dc3ed261bf8d2e62c4f1ffaccc28e8ffcfa1